--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
     "sinon": "^1.17.5",
     "sinon-chai": "2.8.0",
     "snazzy": "^5.0.0",
-    "three": "github:jel-app/three.js#hubs/master",
+    "three": "github:jel-app/three.js#v118",
     "too-wordy": "ngokevin/too-wordy",
     "uglifyjs": "^2.4.10",
     "write-good": "^0.9.1"
